--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -31,8 +31,8 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
     background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 1) 10vw, rgba(255, 255, 255, 0.4) 25vw, rgba(255, 255, 255, 0) 30vw);
     /* Allows interaction with the image:+ */
     pointer-events: none; 
@@ -124,6 +124,16 @@ html {
     font-family: "Bodoni Moda", serif;
     margin-left: 4vw;
   }
+
+  .image-bottom-fade {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 100vw;
+    min-height: 11vh; 
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    pointer-events: none;
+}
 
   /* Thatcher Hotel Showcase */
 .thatcher-showcase {
