--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -118,7 +118,7 @@ html, body {
   }
 
   .company-name {
-    font-size: 2vw;
+    font-size: 3rem;
     color: black;
     font-family: "Dancing Script", serif;
     font-weight: 2;
@@ -245,6 +245,21 @@ html, body {
 }
 
 /* Footer Styles */
+
+.footer-container {
+  position: relative;
+}
+
+.footer-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20px; /* Controls shadow thickness */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), transparent);
+}
+
 .landing-footer {
   position: relative;
   width: 100vw;
