--- a/src/components/Contact/MockContactForm.css
+++ b/src/components/Contact/MockContactForm.css
@@ -1,13 +1,53 @@
+
+.contact-page {
+    position: relative;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Back Button Placement */
+.back-container {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.back-button {
+    background: #faeddb;
+    border: 1px solid black;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+    font-size: 1.2rem;
+    color: black;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: "Oswald", serif;
+    padding: 8px 116px  8px 100px;
+    transition: background 0.3s;
+    border-radius: 5px;
+}
+
+.back-button:hover {
+    background-color: white;
+}
+
 .contact-container {
     width: 90%;
     max-width: 600px;
-    margin: auto;
+    background: #faeddb;
+    opacity: 0.89;
     padding: 30px;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 8px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     font-family: "Oswald", serif;
+}
+
+
+.contact-nav {
+    text-align: left; 
+    margin-bottom: 15px; 
 }
 
 h2 {
@@ -37,7 +77,6 @@ input, textarea {
     padding: 10px;
     font-size: 1rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
     font-family: "Oswald", serif;
 }
 
@@ -48,10 +87,11 @@ textarea {
 button {
     background: black;
     color: white;
+    font-family: "Bodoni Moda", serif;
+    letter-spacing: .2rem;
     padding: 12px;
     font-size: 1.1rem;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s;
 }
