--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -76,6 +76,12 @@
   .contact-page-nav a {
     color: white !important; 
   }
+
+  @media (max-width: 1300px) {
+    .header-container {
+      right: 0;
+    }
+  }
   
   /* Hide normal nav on mobile */
   @media (max-width: 700px) {
